# cybercat-core

./: cybercat-core-sketch.cabal  stack.yaml
src/: Cybercat.hs  Cybercatv2.hs  Cybercatv3.hs  Cybercatv4.hs  Cybercatv5.hs  Cybercatv6.hs
src/Cybercat/: Core.hs  Lens.hs  SimpleGames.hs
src/Cybercat/Examples/: SimpleGames.hs
src/Cybercat/Sketches/: IntLens.hs  Iteration.hs  LensValues.hs  MonadicLens.hs  MonadicOptic.hs
