name:                cybercat-core-sketch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cybercat-core-sketch#readme
license:             AGPL
license-file:        LICENSE
author:              Jules Hedges
maintainer:          jules.hedges@strath.ac.uk
copyright:           2022 Jules Hedges
category:            Lenses
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cybercat.Core, Cybercat.Lens, Cybercat.SimpleGames, Cybercat.Examples.SimpleGames
  build-depends:       base >= 4.7 && < 5, contravariant, lens, lens-tutorial (>= 1.0.4)
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cybercat-core-sketch
